dataRetrieval 2.7.11
==================
* Updated some documentation to improve examples.
* Changed the check for internet to better account for proxies.

dataRetrieval 2.7.10
==================
* Functions that come back from a server that had and error now return with a message and NULL rather than error.

dataRetrieval 2.7.9
===================
* Fix bug caused by changes in NLDI services
* Adding warnings to NWIS qw functions
* Added new vignette on changes

dataRetrieval 2.7.8
==================
* Fixed missing comments in readNWISqw
* Added Stable Isotopes, Habitat, and Other water quality groupings
* Adding options for updated readr

dataRetrieval 2.7.7
==================
* The NLDI service is now available through the `findNLDI` function.
* Adjusted Water Quality Portal (WPQ) URLs to follow new structure
* Fixed bug where some WQP results were being duplicated
* Added an argument to readWQPdata to ignore fetching site and parameter attributes.
* Fixed timezone bug in RDB requests that had mixed timezones.
* Updated internal data for parameter codes
* Added parameterCd argument to readNWISgwl as the services had changed
* Allow a "service" argument in readWQPdata, whatWQPsites

dataRetrieval 2.7.5
==========
* Fixed some time zone joining bugs that were happening if the timezone column had no information in the first ~100 returned rows.
* Changed WQP default behavior to a zip return
* Remove reshape2 and dplyr dependencies
* Added ability to customize user agent using options UA.dataRetrieval

dataRetrieval 2.7.3
==========
* Reworked whatNWISdata to allow the full flexibility of `...`
* Check for dates in instantaneous data, allowing requests for recent data to be routed directly to waterservices.gov.

dataRetrieval 2.7.1
==========
* Converted vignette to html

dataRetrieval 2.7.0
==========
* Added National Groundwater Monitoring Network services