@@ -68,9 +68,10 @@ dane_county_data <- readWQPsummary(countycode = "US:55:025",
 
 lake_sites <- readWQPsummary(siteType = "Lake, Reservoir, Impoundment",
                          countycode = "US:55:025")
-                           
-# Very slow:
-#state1 <- readWQPsummary(statecode="NJ")
+                    
+state1 <- readWQPsummary(statecode="NJ",
+                         summaryYears = 5,
+                         siteType = "Stream")
 }
 \dontshow{\}) # examplesIf}
 }
